// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorText matches snapshot: enzyme.mount 1`] = `
<glamorous(span)>
  <span
    className="css-1fve0n6"
  >
    example
  </span>
</glamorous(span)>
`;

exports[`ErrorText matches snapshot: enzyme.render 1`] = `
<span
  class="css-1fve0n6"
>
  example
</span>
`;

exports[`ErrorText matches snapshot: enzyme.shallow 1`] = `
<span
  className="css-1fve0n6"
>
  example
</span>
`;
